--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="burbujas"></div>
             <div class="burbujas"></div>
         </div>
-        <footer class="contacto">
+        <footer id= "contac" class="contacto">
             <p class="contacto__firma">
                 Hecho por JANELKA BONILLA en ONE-Chalenge 3
             </p>
