--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         </div>
         <div id="jugando">
             <div class="jugando__botones">
-                <button type="button" class="btn" id="btn__nuevojuego" onclick="upgrade()">Nuevo juego</button>
+                <button type="button" class="btn" id="btn__nuevojuego" onclick="nuevojuego()">Nuevo juego</button>
                 <button type="button" class="btn" id="btn__desistir"onclick="upgrade()">Salir</button>
             </div>
         </div>
         <canvas id="pizarra" width="1200px" height="500px"></canvas>
         <div id="text-loser" display="none"> 
-            
+          
         </div>
         <div id="text">
             <img Id="wested" width="300px" height="300px"  src="imagenes/wested.png">
