--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="canvas.css">
         <link rel="stylesheet" href="botones.css">
-        <title>Juego del ahorcado - Alura Challenges ONE</title>
+        <title>Juego del ahorcado||Challenges ONE</title>
     </head>
     <body>  
          
@@ -32,7 +32,7 @@
         </div>
         <div id="jugando">
             <div class="jugando__botones">
-                <button type="button" class="btn" id="btn__nuevojuego" onclick="nuevojuego()">Nuevo juego</button>
+                <button type="button" class="btn" id="btn__nuevojuego" onclick="upgrade()">Nuevo juego</button>
                 <button type="button" class="btn" id="btn__desistir"onclick="upgrade()">Salir</button>
             </div>
         </div>
